--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!--sec-1-->
     <section class="sec-1">
       <nav>
         <div class="container">
@@ -60,21 +61,68 @@
           <div class="imghead">
             <img src="images/img1.jpg" alt="" />
             <div id="imgfoot">
-              <span style="margin:auto 5px ;">
-                <i class="fa-solid fa-heart fa-beat-fade" style="color: #ffffff"></i>
-                <small style="padding-right:10px;padding-left: 1px;">700</small>
+              <span style="margin: auto 5px">
+                <i
+                  class="fa-solid fa-heart fa-beat-fade"
+                  style="color: #ffffff"
+                ></i>
+                <small style="padding-right: 10px; padding-left: 1px"
+                  >700</small
+                >
 
-                <i class="fa-solid fa-comment fa-bounce" style="color: #ffffff;"></i>
-                <small>700</small></span>
+                <i
+                  class="fa-solid fa-comment fa-bounce"
+                  style="color: #ffffff"
+                ></i>
+                <small>700</small></span
+              >
 
               <div>
                 <h3 style="font-size: 10">This is headline 1</h3>
-                <span  style="  color: orange;  "><small>Spanned text</small></span>
+                <span class="Spanned"><small>Spanned text</small></span>
               </div>
             </div>
           </div>
         </article>
       </div>
+    </section>
+    <!--sec-2-->
+    <section class="sec-2">
+      <div class="container">
+        <article class="About-us">
+          <div class="center">
+            <h2>About Us</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime
+              qui reiciendis animi dolore maiores perferendis praesentium eaque
+              nostrum?
+            </p>
+            <hr />
+          </div>
+
+          <div id="btn-about">
+            <a href="#"> mission</a>
+            <a href="#">vision</a>
+            <a href="#"> sponsors</a>
+          </div>
+
+          <div class="about-flex">
+            <img src="images/about.jpg" alt="">
+            <aside>
+              <div>
+                <h3>SPECIAL OFFERS ON OUR COURSES</h3>
+                <h5>REGISTER TODAY AND SAVE 50% OFF</h5>
+              </div>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse temporibus quae sint consectetur, modi ipsa quo voluptatibus minima perspiciatis rem accusantium perferendis. Quae quidem tempore eius fugit! Modi facilis quidem, quam dolorum hic repellendus itaque quis? Enim, ipsum debitis. Similique totam neque reiciendis deserunt perspiciatis consectetur necessitatibus ad quod fuga eaque?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, voluptate quod unde deleniti voluptas ad sequi, molestias sed debitis fugiat iusto natus blanditiis cumque nam labore adipisci? Necessitatibus, possimus debitis architecto ea vero nam voluptatum reiciendis consequatur aut, neque dolore velit sed iusto deleniti repellendus. Quisquam hic saepe aliquam perferendis sit!</p>
+            </aside>
+          </div>
+
+        </article>
+      </div>
+    </section>
+     <!--sec-3-->
+    <section class="sec-3">
     </section>
   </body>
 </html>
