--- a/home.html
+++ b/home.html
@@ -107,22 +107,99 @@
           </div>
 
           <div class="about-flex">
-            <img src="images/about.jpg" alt="">
+            <img src="images/about.jpg" alt="" />
             <aside>
               <div>
                 <h3>SPECIAL OFFERS ON OUR COURSES</h3>
                 <h5>REGISTER TODAY AND SAVE 50% OFF</h5>
               </div>
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse temporibus quae sint consectetur, modi ipsa quo voluptatibus minima perspiciatis rem accusantium perferendis. Quae quidem tempore eius fugit! Modi facilis quidem, quam dolorum hic repellendus itaque quis? Enim, ipsum debitis. Similique totam neque reiciendis deserunt perspiciatis consectetur necessitatibus ad quod fuga eaque?</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, voluptate quod unde deleniti voluptas ad sequi, molestias sed debitis fugiat iusto natus blanditiis cumque nam labore adipisci? Necessitatibus, possimus debitis architecto ea vero nam voluptatum reiciendis consequatur aut, neque dolore velit sed iusto deleniti repellendus. Quisquam hic saepe aliquam perferendis sit!</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                temporibus quae sint consectetur, modi ipsa quo voluptatibus
+                minima perspiciatis rem accusantium perferendis. Quae quidem
+                tempore eius fugit! Modi facilis quidem, quam dolorum hic
+                repellendus itaque quis? Enim, ipsum debitis. Similique totam
+                neque reiciendis deserunt perspiciatis consectetur
+                necessitatibus ad quod fuga eaque?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Reiciendis, voluptate quod unde deleniti voluptas ad sequi,
+                molestias sed debitis fugiat iusto natus blanditiis cumque nam
+                labore adipisci? Necessitatibus, possimus debitis architecto ea
+                vero nam voluptatum reiciendis consequatur aut, neque dolore
+                velit sed iusto deleniti repellendus. Quisquam hic saepe aliquam
+                perferendis sit!
+              </p>
             </aside>
           </div>
-
         </article>
       </div>
     </section>
-     <!--sec-3-->
+    <!--sec-3-->
     <section class="sec-3">
+      <div class="container">
+        <article>
+          <h2>OUR SERVICES</h2>
+          <small
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
+            autem quidem doloremque unde exercitationem dolore ipsum atque.
+            Explicabo nihil eos suscipit temporibus magni laboriosam, maxime
+            maiores quod iusto numquam sapiente.</small
+          >
+          <hr />
+        </article>
+        <div class="flexsec3">
+          <div class="parent1">
+            <img src="images/Development-bg.jpg" alt="" />
+            <div class="position2sec3">
+              <img src="images/Develop-hover-icn.png" alt="" />
+              <p>DEVELOPMENT</p>
+            </div>
+            <div class="position1sec3">
+              <img src="images/Development-cn.png" alt="" />
+              <p>DEVELOPMENT</p>
+            </div>
+          </div>
+
+          <div class="parent1">
+            <img src="images/desgin-bg.jpg" alt="" />
+            <div class="position2sec3">
+              <img src="images/desgin-hover-icn.png" alt="" />
+              <p>DESGIN</p>
+            </div>
+            <div class="position1sec3">
+              <img src="images/desgin-icn.png" alt="" />
+              <p style="color:#ffab3f ;">DESGIN</p>
+            </div>
+          </div>
+
+          <div class="parent1">
+            <img src="images/concept-bg.jpg" alt="" />
+            <div class="position2sec3">
+              <img src="images/concept-hover-icn.png" alt="" />
+              <p>CONCEPT</p>
+            </div>
+            <div class="position1sec3">
+              <img src="images/concept-icn.png" alt="" />
+              <p style="color:#aa362b;">CONCEPT</p>
+            </div>
+          </div>
+
+          <div class="parent1">
+            <img src="images/systam-bg.jpg" alt="" />
+            <div class="position2sec3">
+              <img src="images/systam-hover-icn.png" alt="" />
+              <p>SYSTEM</p>
+            </div>
+            <div class="position1sec3">
+              <img src="images/systam-icn.png" alt="" />
+              <p style="color:#4d4d4d ;">SYSTEM</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </section>
   </body>
 </html>
