--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
             </div>
             <div class="position1sec3">
               <img src="images/desgin-icn.png" alt="" />
-              <p style="color:#ffab3f ;">DESGIN</p>
+              <p style="color: #ffab3f">DESGIN</p>
             </div>
           </div>
 
@@ -182,7 +182,7 @@
             </div>
             <div class="position1sec3">
               <img src="images/concept-icn.png" alt="" />
-              <p style="color:#aa362b;">CONCEPT</p>
+              <p style="color: #aa362b">CONCEPT</p>
             </div>
           </div>
 
@@ -194,11 +194,108 @@
             </div>
             <div class="position1sec3">
               <img src="images/systam-icn.png" alt="" />
-              <p style="color:#4d4d4d ;">SYSTEM</p>
+              <p style="color: #4d4d4d">SYSTEM</p>
             </div>
           </div>
-
         </div>
+      </div>
+    </section>
+    <!--sec-4-->
+    <section class="sec-4">
+      <div class="container">
+        <article>
+          <div>
+            <h2>PRICING</h2>
+            <small
+              >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
+              autem quidem doloremque unde exercitationem dolore ipsum atque.
+              Explicabo nihil eos suscipit temporibus magni laboriosam, maxime
+              maiores quod iusto numquam sapiente.</small
+            >
+            <hr />
+          </div>
+
+          <div class="flexsec4">
+            <div class="flex2">
+              <h5>Basic</h5>
+              <h4>$27.50</h4>
+            </div>
+            <small
+              >2,000GB <br />
+              Band WIDTH</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >32GB <br />
+              MEMORY</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >SUPPORT <br />
+              24 HOURS</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >UBDATE <br />
+              $20</small
+            >
+            <a href="#">ORDER NOW</a>
+          </div>
+          <br />
+          <div class="flexsec4">
+            <div class="flex2">
+              <h5>BIZ</h5>
+              <h4>$44.50</h4>
+            </div>
+            <small
+              >5,500GB <br />
+              Band WIDTH</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >64GB <br />
+              MEMORY</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >SUPPORT <br />
+              1 HOURS</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >UBDATE <br />
+              $10</small
+            >
+            <a href="#">ORDER NOW</a>
+          </div>
+          <br />
+          <div class="flexsec4">
+            <div class="flex2">
+              <h5>PRO</h5>
+              <h4>$72.50</h4>
+            </div>
+            <small>
+              <p>12,000GB</p>
+              Band WIDTH</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >128GB <br />
+              MEMORY</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >SUPPORT <br />
+              15 MINS</small
+            >
+            <img src="images/divider.png" alt="" />
+            <small
+              >UBDATE <br />
+              FREE</small
+            >
+            <a href="#">ORDER NOW</a>
+          </div>
+        </article>
       </div>
     </section>
   </body>
