--- a/home.html
+++ b/home.html
@@ -189,7 +189,7 @@
           <div class="parent1">
             <img src="images/systam-bg.jpg" alt="" />
             <div class="position2sec3">
-              <img src="images/systam-hover-icn.png" alt="" />
+              <img src="images/systam-icn.png" alt="" />
               <p>SYSTEM</p>
             </div>
             <div class="position1sec3">
@@ -206,12 +206,12 @@
         <article>
           <div>
             <h2>PRICING</h2>
-            <small
-              >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
               autem quidem doloremque unde exercitationem dolore ipsum atque.
               Explicabo nihil eos suscipit temporibus magni laboriosam, maxime
-              maiores quod iusto numquam sapiente.</small
-            >
+              maiores quod iusto numquam sapiente.
+            </p>
             <hr />
           </div>
 
@@ -298,5 +298,72 @@
         </article>
       </div>
     </section>
+    <!--sec-5-->
+    <section class="sec-5">
+      <div class="container">
+        <article>
+          <h2>CONTACT US</h2>
+          <small
+            >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat,
+            cumque suscipit quas porro nesciunt mollitia? Officia vel
+            accusantium, dolore deserunt est nam iusto, velit voluptates
+            explicabo voluptate, eaque possimus neque?</small
+          >
+          <hr />
+        </article>
+      </div>
+    </section>
+    <!--sec-6-->
+    <footer class="sec-6">
+      <div class="container">
+        <div class="flexsec6">
+          <form action="get">
+            <input type="text" placeholder="NAME" />
+            <input type="email"  placeholder="EMAIL"/>
+            <input type="tex"  placeholder="TITLE"/>
+            <input id="message"  type="" placeholder="MESSAGE" />
+            <button>SEND</button>
+          </form>
+
+          <article>
+            <h2>GET IN TOUCH!</h2>
+            <div class="flex3">
+              <i
+                class="fa-solid fa-map-location fa-bounce fa-xl"
+                style="color: #ffffff"
+              ></i>
+              <small
+                >Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Consectetur mollitia dolorem.</small
+              >
+            </div>
+<br>
+            <div class="flex3">
+              <i
+                class="fa-solid fa-phone fa-bounce fa-xl"
+                style="color: #ffffff"
+              ></i>
+              <small>
+                (+100)0010020034, (+003)0090080760, (+004)0010020034
+              </small>
+            </div>
+<br>
+            <div class="flex3">
+              <i
+                class="fa-solid fa-envelope fa-bounce fa-xl"
+                style="color: #ffffff"
+              ></i>
+              <small> info@gmail.com </small>
+            </div>
+<br>
+            <div class="flex3">
+              <img src="images/icons/facebook-icn.png" alt="">
+              <img src="images/icons/twitter-icn.png" alt="">
+              <img src="images/icons/google-plus-icn.png" alt="">
+            </div>
+          </article>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
