--- a/home.html
+++ b/home.html
@@ -319,9 +319,9 @@
         <div class="flexsec6">
           <form action="get">
             <input type="text" placeholder="NAME" />
-            <input type="email"  placeholder="EMAIL"/>
-            <input type="tex"  placeholder="TITLE"/>
-            <input id="message"  type="" placeholder="MESSAGE" />
+            <input type="email" placeholder="EMAIL" />
+            <input type="tex" placeholder="TITLE" />
+            <textarea id="message" type="" placeholder="MESSAGE" ></textarea>
             <button>SEND</button>
           </form>
 
@@ -337,7 +337,7 @@
                 Consectetur mollitia dolorem.</small
               >
             </div>
-<br>
+            <br />
             <div class="flex3">
               <i
                 class="fa-solid fa-phone fa-bounce fa-xl"
@@ -347,7 +347,7 @@
                 (+100)0010020034, (+003)0090080760, (+004)0010020034
               </small>
             </div>
-<br>
+            <br />
             <div class="flex3">
               <i
                 class="fa-solid fa-envelope fa-bounce fa-xl"
@@ -355,11 +355,11 @@
               ></i>
               <small> info@gmail.com </small>
             </div>
-<br>
+            <br />
             <div class="flex3">
-              <img src="images/icons/facebook-icn.png" alt="">
-              <img src="images/icons/twitter-icn.png" alt="">
-              <img src="images/icons/google-plus-icn.png" alt="">
+              <img src="images/icons/facebook-icn.png" alt="" />
+              <img src="images/icons/twitter-icn.png" alt="" />
+              <img src="images/icons/google-plus-icn.png" alt="" />
             </div>
           </article>
         </div>
